[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "viewtomo"
version = "0.1.0"
description = "Automated ViewTomo Alignment and Reconstruction"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "mrcfile",
    "numpy",
    "scipy",
    "matplotlib",
    "scikit-learn",
    "psutil",
]

[project.scripts]
viewtomo_align = "viewtomo.viewtomo_align:main"

[tool.setuptools]
packages = ["viewtomo"]
include-package-data = true

[tool.setuptools.package-data]
viewtomo = ["templates/*.adoc"]